<resources>
    <string name="app_name">JamBuddies</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Email</string>
    <string name="password">Password</string>
    <string name="add_items_to_database">Add Items to Database</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_an_instrument">Select An Instrument</string>
    <string name="select_a_location">Select A Location</string>
    <string name="instrument_label">Instrument :</string>
    <string name="location_label">Location :</string>


</resources>
