<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">


    <EditText
        android:id="@+id/username"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Enter a name"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/locationtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location_label"
            android:textSize="18sp"
            tools:layout_width="match_parent"/>

        <Spinner
            android:id="@+id/locationspinner"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:entries="@array/Counties_array"
            android:prompt="@string/select_a_location"
            android:spinnerMode="dialog"
            android:text="@string/select_a_location"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Instrumenttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/instrument_label"
            android:textSize="18sp"
            tools:layout_width="match_parent"/>
        <Spinner
            android:id="@+id/Instrumentspinner"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:entries="@array/Instrument_array"
            android:prompt="@string/select_an_instrument"
            android:spinnerMode="dialog"
            android:text="@string/select_an_instrument"
            />


    </LinearLayout>



    <EditText
        android:id="@+id/Styles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter Your Musicial Styles"/>

    <EditText
        android:id="@+id/bio"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="Enter Your Bio " />

    <EditText
        android:id="@+id/Links"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="Enter your Links"/>

    <Button

        android:id="@+id/btnSavetoDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save data" />

</LinearLayout>